--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -5,8 +5,10 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/dataTables.bootstrap4.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedcolumns.bootstrap4.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
+    <link rel="stylesheet"
+          href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedcolumns.bootstrap4.min.css') }}">
+    <link rel="stylesheet"
+          href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
     <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
 {% endblock %}
 {% block sidebar %}
@@ -17,72 +19,77 @@
     <div id="main-content">
         <div class="container-fluid">
             <div class="col-lg-12">
-        <div class="card">
-            <div class="body">
-                <button id="addToTable" class="btn btn-primary m-b-15" type="button">
-                    <i class="icon wb-plus" aria-hidden="true"></i>{{ 'product_page.add_row' | trans }}
-                </button>
-                <div class="table-responsive">
-                    <table class="table table-bordered table-hover table-striped" cellspacing="0" id="main-table">
-                        <thead>
-                        <tr>
-                            <th>{{ 'product_page.product_id' | trans }}</th>
-                            <th>{{ 'product_page.product_name' | trans }}</th>
-                            <th>{{ 'product_page.barcode' | trans }}</th>
-                            <th>{{ 'product_page.image_path' | trans }}</th>
-                            <th>{{ 'product_page.category' | trans }}</th>
-                            <th>{{ 'product_page.shelf_life' | trans }}</th>
-                            <th>{{ 'product_page.promotion' | trans }}</th>
-                            <th>{{ 'product_page.stock' | trans }}</th>
-                            <th>{{ 'product_page.description' | trans }}</th>
-                            <th>{{ 'product_page.action' | trans }}</th>
-                        </tr>
-                        </thead>
-                        <tfoot>
-                        <tr>
-                            <th>{{ 'product_page.product_id' | trans }}</th>
-                            <th>{{ 'product_page.product_name' | trans }}</th>
-                            <th>{{ 'product_page.barcode' | trans }}</th>
-                            <th>{{ 'product_page.image_path' | trans }}</th>
-                            <th>{{ 'product_page.category' | trans }}</th>
-                            <th>{{ 'product_page.shelf_life' | trans }}</th>
-                            <th>{{ 'product_page.promotion' | trans }}</th>
-                            <th>{{ 'product_page.stock' | trans }}</th>
-                            <th>{{ 'product_page.description' | trans }}</th>
-                            <th>{{ 'product_page.action' | trans }}</th>
-                        </tr>
-                        </tfoot>
-                        <tbody>
-                        {% for p in products %}
-                            <tr class="gradeA">
-                                <td>{{ p.ProductId }}</td>
-                                <td>{{ p.ProductName }}</td>
-                                <td>{{ p.Barcode }}</td>
-                                <td>{{ p.ImagePath }}</td>
-                                <td>{{ p.Category }}</td>
-                                <td>{{ p.ShelfLife }}</td>
-                                <td>{{ p.Promotion }}</td>
-                                <td>{{ p.Stock }}</td>
-                                <td>{{ p.Description }}</td>
-                                <td class="actions">
-                                    <button class="btn btn-sm btn-icon btn-pure btn-default on-editing m-r-5 button-save"
-                                            data-toggle="tooltip" data-original-title="Save" hidden><i class="icon-drawer" aria-hidden="true"></i></a>
-                                        <button class="btn btn-sm btn-icon btn-pure btn-default on-editing button-discard"
-                                                data-toggle="tooltip" data-original-title="Discard" hidden><i class="icon-close" aria-hidden="true"></i></a>
-                                            <button class="btn btn-sm btn-icon btn-pure btn-default on-default m-r-5 button-edit"
-                                                    data-toggle="tooltip" data-original-title="Edit"><i class="icon-pencil" aria-hidden="true"></i></a>
-                                                <button class="btn btn-sm btn-icon btn-pure btn-default on-default button-remove"
-                                                        data-toggle="tooltip" data-original-title="Remove"><i class="icon-trash" aria-hidden="true"></i></a>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                    </button>
+                <div class="card">
+                    <div class="body">
+                        <button id="addToTable" class="btn btn-primary m-b-15" type="button">
+                            <i class="icon wb-plus" aria-hidden="true"></i>{{ 'product_page.add_row' | trans }}
+                        </button>
+                        <div class="table-responsive">
+                            <table class="table table-bordered table-hover table-striped" cellspacing="0"
+                                   id="main-table">
+                                <thead>
+                                <tr>
+                                    <th>{{ 'product_page.product_id' | trans }}</th>
+                                    <th>{{ 'product_page.product_name' | trans }}</th>
+                                    <th>{{ 'product_page.barcode' | trans }}</th>
+                                    <th>{{ 'product_page.image_path' | trans }}</th>
+                                    <th>{{ 'product_page.category' | trans }}</th>
+                                    <th>{{ 'product_page.shelf_life' | trans }}</th>
+                                    <th>{{ 'product_page.promotion' | trans }}</th>
+                                    <th>{{ 'product_page.stock' | trans }}</th>
+                                    <th>{{ 'product_page.description' | trans }}</th>
+                                    <th>{{ 'product_page.action' | trans }}</th>
+                                </tr>
+                                </thead>
+                                <tfoot>
+                                <tr>
+                                    <th>{{ 'product_page.product_id' | trans }}</th>
+                                    <th>{{ 'product_page.product_name' | trans }}</th>
+                                    <th>{{ 'product_page.barcode' | trans }}</th>
+                                    <th>{{ 'product_page.image_path' | trans }}</th>
+                                    <th>{{ 'product_page.category' | trans }}</th>
+                                    <th>{{ 'product_page.shelf_life' | trans }}</th>
+                                    <th>{{ 'product_page.promotion' | trans }}</th>
+                                    <th>{{ 'product_page.stock' | trans }}</th>
+                                    <th>{{ 'product_page.description' | trans }}</th>
+                                    <th>{{ 'product_page.action' | trans }}</th>
+                                </tr>
+                                </tfoot>
+                                <tbody>
+                                {% for p in products %}
+                                    <tr class="gradeA">
+                                        <td>{{ p.ProductId }}</td>
+                                        <td>{{ p.ProductName }}</td>
+                                        <td>{{ p.Barcode }}</td>
+                                        <td>{{ p.ImagePath }}</td>
+                                        <td>{{ p.Category }}</td>
+                                        <td>{{ p.ShelfLife }}</td>
+                                        <td>{{ p.Promotion }}</td>
+                                        <td>{{ p.Stock }}</td>
+                                        <td>{{ p.Description }}</td>
+                                        <td class="actions">
+                                            <button class="btn btn-sm btn-icon btn-pure btn-default on-editing m-r-5 button-save"
+                                                    data-toggle="tooltip" data-original-title="Save" hidden><i
+                                                        class="icon-drawer" aria-hidden="true"></i></a>
+                                                <button class="btn btn-sm btn-icon btn-pure btn-default on-editing button-discard"
+                                                        data-toggle="tooltip" data-original-title="Discard" hidden><i
+                                                            class="icon-close" aria-hidden="true"></i></a>
+                                                    <button class="btn btn-sm btn-icon btn-pure btn-default on-default m-r-5 button-edit"
+                                                            data-toggle="tooltip" data-original-title="Edit"><i
+                                                                class="icon-pencil" aria-hidden="true"></i></a>
+                                                        <button class="btn btn-sm btn-icon btn-pure btn-default on-default button-remove"
+                                                                data-toggle="tooltip" data-original-title="Remove"><i
+                                                                    class="icon-trash" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
         </div>
     </div>
 {% endblock %}
@@ -97,7 +104,7 @@
     <script src="{{ asset('vendor/sweetalert/sweetalert.min.js') }}"></script>
     <script src="{{ asset('js/pages/tables/jquery-datatable.js') }}"></script>
     <script>
-        $(document).on("click", "#mySubmitButton", function(){
+        $(document).on("click", "#mySubmitButton", function () {
             // get the properties and values from the form
             cells = $("#addingRow").find("td");
             data = {
@@ -113,24 +120,24 @@
             };
 
             // simple approach avoid submitting multiple times
-            $('#mySubmitButton').attr("disabled",true);
+            $('#mySubmitButton').attr("disabled", true);
             $.ajax({
                 url: '/product/new',
                 type: 'POST',
                 dataType: 'json',
                 data: JSON.stringify(data),
-                success:function(data){
+                success: function (data) {
 
-                    if(data.status == 'saved'){
+                    if (data.status == 'saved') {
                         console.log("entity saved ! ");
                     }
-                    if(data.status == 'invalid'){
+                    if (data.status == 'invalid') {
                         console.log("entity submitted was invalid, use try catch and getMessage of eventual errors in you controller action, you can pass all that to the returning array you can receive and parse here ! ");
                     }
 
                     // signal user action is done
                     $('#loadingSpinner').hide();
-                    $('#mySubmitButton').attr("disabled",false);
+                    $('#mySubmitButton').attr("disabled", false);
                 }
             });
         });
