--- a/templates/user/userList_admins.html.twig
+++ b/templates/user/userList_admins.html.twig
@@ -18,10 +18,10 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-8 col-sm-12">
                         <h2><a href="javascript:void(0);" class="btn btn-xs btn-link btn-toggle-fullwidth"><i
-                                        class="fa fa-arrow-left"></i></a>{{ 'userList_pages.title_sellers'|trans }}</h2>
+                                        class="fa fa-arrow-left"></i></a>{{ 'userList_pages.title_admins'|trans }}</h2>
                         <ul class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/"><i class="icon-home"></i></a></li>
-                            <li class="breadcrumb-item active">{{ 'userList_pages.title_sellers'|trans }}</li>
+                            <li class="breadcrumb-item active">{{ 'userList_pages.title_admins'|trans }}</li>
                         </ul>
                     </div>
                     <div class="col-lg-6 col-md-4 col-sm-12 text-right">
@@ -115,7 +115,7 @@
                                                 <span>{{ user.date_register|date('Y年m月d日') }}</span>
                                             </td>
                                             <td>
-                                                <a class="btn btn-info" title="Edit"><i
+                                                <a href="/userList/edit/{{ user.user_id }}&Admins" class="btn btn-info" title="Edit"><i
                                                             class="fa fa-edit"></i></a>
                                                 <a href="/userList/delete/{{ user.user_id }}&Admins" class="btn btn-danger delete_user_confirm" title="Delete"><i
                                                             class="fa fa-trash-o"></i></a>
