--- a/templates/user/userList_sellers.html.twig
+++ b/templates/user/userList_sellers.html.twig
@@ -123,7 +123,7 @@
                                                 <span>{{ user.date_register|date('Y年m月d日') }}</span>
                                             </td>
                                             <td>
-                                                <a class="btn btn-info" title="Edit"><i
+                                                <a href="/userList/edit/{{ user.user_id }}&Sellers" class="btn btn-info" title="Edit"><i
                                                             class="fa fa-edit"></i></a>
                                                 <a href="/userList/delete/{{ user.user_id }}&Sellers" class="btn btn-danger delete_user_confirm" title="Delete"><i
                                                             class="fa fa-trash-o"></i></a>
