--- a/templates/user/userList_users.html.twig
+++ b/templates/user/userList_users.html.twig
@@ -123,7 +123,7 @@
                                                 <span>{{ user.date_register|date('Y年m月d日') }}</span>
                                             </td>
                                             <td>
-                                                <a href="/userList/edit/{{ user.user_id }}" class="btn btn-info"><i
+                                                <a href="/userList/edit/{{ user.user_id }}&Users" class="btn btn-info"><i
                                                             class="fa fa-edit"></i></a>
                                                 <a href="/userList/delete/{{ user.user_id }}&Users" class="btn btn-danger delete_user_confirm"><i
                                                             class="fa fa-trash-o"></i></a>
@@ -158,7 +158,7 @@
                     type: "warning",
                     showCancelButton: true,
                     confirmButtonColor: "#dc3545",
-                    confirmButtonText: "确定删除！",
+                    confirmButtonText: "确定删除",
                     cancelButtonText: "取消"
                 }, function() {
                     window.location.href = linkURL;
