--- a/templates/user/userList_sellers.html.twig
+++ b/templates/user/userList_sellers.html.twig
@@ -59,6 +59,7 @@
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="body">
+                            <a href="/userList/add/Sellers" class="btn btn-primary m-b-15 text-white">{{ 'userList_pages.add_seller'|trans }}</a>
                             <div class="table-responsive">
                                 <table class="table table-bordered table-striped table-hover js-basic-example dataTable table-custom table-userList text-center">
                                     <thead>
