--- a/templates/purchase/index.html.twig
+++ b/templates/purchase/index.html.twig
@@ -7,20 +7,54 @@
     <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedcolumns.bootstrap4.min.css') }}">
     <link rel="stylesheet" href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
     <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
-
+    <link rel="stylesheet" href="{{ asset('css/popup_box.css') }}"/>
 {% endblock %}
 {% block sidebar %}
     {% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, nav_menu, nav_admin = "", "", "active", "", "", "", "", "", "active", "" %}
     {{ parent() }}
 {% endblock %}
 {% block main_content %}
+    <div id="overlay"></div>
+    <div id="popupBox">
+        <div id="popupContent">
+            <div class="header">
+                <p class="lead">{{ 'purchase_page.title'|trans }}</p>
+            </div>
+            <div class="body">
+                {{ form_start(form, {'attr': {'class': 'form-auth-small'}}) }}
+                <div class="form-group">
+                    {{ form_widget(form.user_id, {'attr': {'class': 'form-control', 'id': 'signup-firstname'}}) }}
+                    {{ form_errors(form.user_id) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.product_id, {'attr': {'class': 'form-control', 'id': 'signup-phone'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.date_purchase) }}
+                    {{ form_widget(form.date_purchase, {'attr': {'class': 'form-control-select', 'id': 'signup-date_birth'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.purchase_tracking_id, {'attr': {'class': 'form-control', 'id': 'signup-id_card'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.quantity, {'attr': {'class': 'form-control', 'id': 'signup-region'}}) }}
+                </div>
+                <input type="submit" class="btn btn-primary btn-lg btn-block" value="{{ 'registration_page.btn'|trans }}">
+                {{ form_end(form) }}
+                <p></p>
+                <a href="javascript:void(0)" id="popupCancel"  class="btn btn-primary btn-lg btn-block">
+                    <i class="icon wb-plus" aria-hidden="false"></i>{{ 'purchase_page.return'|trans }}
+                </a>
+            </div>
+        </div>
+    </div>
     <div id="main-content">
         <div class="container-fluid">
             <div class="row clearfix">
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="body">
-                            <a href="/purchasehistory/register"  class="btn btn-primary m-b-15">
+                            <a href="javascript:void(0)" id="addRow" class="btn btn-primary m-b-15">
                                 <i class="icon wb-plus" aria-hidden="false"></i>{{ 'purchase_page.index.add_row'|trans }}
                             </a>
                             <div class="table-responsive">
@@ -58,13 +92,13 @@
                                             <td>{{ p.Quantity }}</td>
                                             <td class="actions">
                                                 <button >
-                                                    <a href="/purchasehistory/register"><i class="icon-pencil"></i></a>
+                                                        <a href="/purchasehistory/register"><i class="icon-pencil"></i></a>
                                                 </button>
                                                 <button class="btn btn-sm btn-icon btn-pure btn-default on-default button-remove"
                                                         data-toggle="tooltip" data-original-title="Remove"><i class="icon-trash" aria-hidden="true"></i>
                                                 </button>
                                             </td>
-                                    </tr>
+                                        </tr>
                                     {% endfor %}
 
                                     </tbody>
@@ -87,4 +121,19 @@
     <script src="{{ asset('vendor/jquery-datatable/buttons/buttons.print.min.js') }}"></script>
     <script src="{{ asset('vendor/sweetalert/sweetalert.min.js') }}"></script>
     <script src="{{ asset('js/pages/tables/jquery-datatable.js') }}"></script>
+
+    <script>
+        $('#addRow').click(function () {
+            $('#overlay').fadeIn('fast');
+            $('#popupBox').fadeIn('fast');
+            $('#popupContent').fadeIn('fast');
+        });
+
+        $('#overlay, #popupCancel').click(function () {
+            $('#overlay').fadeOut('fast');
+            $('#popupBox').fadeOut('fast');
+            $('#popupContent').fadeOut('fast');
+        });
+
+    </script>
 {% endblock %}
